Bug 70943 - [SNB/IVB/HSW Bisected]Ogles3conform GL3Tests/uniform_buffer_object/uniform_buffer_object_max_uniform_block_size.test regress
Summary: [SNB/IVB/HSW Bisected]Ogles3conform GL3Tests/uniform_buffer_object/uniform_bu...
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Eric Anholt
QA Contact: Intel 3D Bugs Mailing List
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-10-28 05:52 UTC by lu hua
Modified: 2013-11-04 02:21 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description lu hua 2013-10-28 05:52:41 UTC
System Environment:
--------------------------
Platform: Sandybridge/Ivybridge/Haswell
Libdrm:		(master)2.4.47
Mesa:		(master)7f7636830514ae37b9df9969c44637f55323d608
Xserver:	(master)xorg-server-1.14.99.3-1-g7ecfab47eb221dbb996ea6c033348b8eceaeb893
Xf86_video_intel:(master)2.99.905-14-g64b9f57451501830f8031d1b6ac7289642da032d
Cairo:		(master)98fef3cef2d0f7f463a2e4f9f1b35b09f7b6ea77
Libva:		(staging)1a011ce5bb0b80506797a25a988854f3f81ce909
Libva_intel_driver:(staging)1cee858036a87837deddc87586701ed869f96261
Kernel:	(drm-intel-nightly) 164a4cb4c1431a0689f85507868356fae24da638

Bug detailed description:
-----------------------------
It fails on Sandybridge/Ivybridge/Haswell with mesa master branch.It doesn't happen on 9.2 branch.
Bisect shows:c3c9a8c85758796a26b48e484286e6b6f5a5299a is the first bad commit.
commit c3c9a8c85758796a26b48e484286e6b6f5a5299a
Author:     Eric Anholt <eric@anholt.net>
AuthorDate: Tue Oct 22 12:27:06 2013 -0700
Commit:     Eric Anholt <eric@anholt.net>
CommitDate: Fri Oct 25 16:45:30 2013 -0700

    i965: Try not to reverse-schedule things when doing LIFO scheduling.

    The LIFO plan was simple: Take the most recently made available
    instructions, and pick those first.

    But because of the order we were pushing things onto our list of
    available-to-schedule instructions, it meant that when a set of
    instructions was made available at the same time (for example, everything
    at the start of the program that didn't depend on other instructions) we'd
    schedule them in reverse order.

    If you had 10 texture calls in a row in your program, each with
    independent argument setup, we'd set up the last texture call's args and
    execute it first, even though we wouldn't be able to consume its results
    until we'd finished the other 9 texture calls (assuming consumption of
    texture results happens near each texture call, and combines it with
    another texture result, which is normal for a convolution shader).

    To fix this, walk the list for doing LIFO in the order that instructions
    were originally generated in the program, but choose to push
    newly-made-available instructions to the other end of the list instead.

    total instructions in shared programs: 1587242 -> 1586290 (-0.06%)
    instructions in affected programs:     7801 -> 6849 (-12.20%)
    GAINED:                                76
    LOST:                                  67

    Thanks to Chia-I Wu for pointing out the bug in my first version of the
    patch that made it a huge loss.

    Reviewed-by: Matt Turner <mattst88@gmail.com>


output:
Running GTF (Graphics Test Framework)
egl_vendor: Mesa Project
egl_version: 1.4
ConfigID: 14 RGBA bits( 8, 8, 8, 8) Depth bits: 0 Stencil bits: 0
gtf_version: 3.0
mode: egl
arg: /GFX/Test/Ogles3conform/ogles3conform/GTF_ES/glsl/GTF/GTF -width=64 -height=64 -run=/GFX/Test/Ogles3conform/ogles3conform/GTF_ES/glsl/GTF/GL3Tests/uniform_buffer_object/uniform_buffer_object_max_uniform_block_size.test
gl_renderer: Mesa DRI Intel(R) Sandybridge Desktop x86/MMX/SSE2
gl_shading_language_version: OpenGL ES GLSL ES 3.0
gl_version: OpenGL ES 3.0 Mesa 10.0.0-devel (git-7f76368)
gl_vendor: Intel Open Source Technology Center
gl_extensions: GL_EXT_blend_minmax GL_EXT_multi_draw_arrays GL_EXT_texture_filter_anisotropic GL_EXT_texture_compression_dxt1 GL_EXT_texture_format_BGRA8888 GL_OES_compressed_ETC1_RGB8_texture GL_OES_depth24 GL_OES_element_index_uint GL_OES_fbo_render_mipmap GL_OES_mapbuffer GL_OES_rgb8_rgba8 GL_OES_standard_derivatives GL_OES_stencil8 GL_OES_texture_3D GL_OES_texture_npot GL_OES_EGL_image GL_OES_depth_texture GL_OES_packed_depth_stencil GL_EXT_texture_type_2_10_10_10_REV GL_OES_get_program_binary GL_APPLE_texture_max_level GL_EXT_discard_framebuffer GL_EXT_read_format_bgra GL_NV_fbo_color_attachments GL_OES_EGL_image_external GL_OES_vertex_array_object GL_ANGLE_texture_compression_dxt3 GL_ANGLE_texture_compression_dxt5 GL_EXT_texture_rg GL_EXT_unpack_subimage GL_NV_draw_buffers GL_NV_read_buffer GL_EXT_map_buffer_range GL_OES_depth_texture_cube_map GL_OES_surfaceless_context GL_EXT_color_buffer_float GL_EXT_shader_integer_mix
stamp: 20131028132729
Zero epsilon: 0.000122, RGBA epsilon: ( 0.004044, 0.004044, 0.004044, 0.004044)
uniform_buffer_object: Start


Reproduce steps:
----------------------------
1. xinit&
2. ./GTF -width=64 -height=64 -run=GL3Tests/uniform_buffer_object/uniform_buffer_object_max_uniform_block_size.test
Comment 1 Eric Anholt 2013-10-28 19:40:26 UTC
I noticed this on Friday (not sure how I didn't notice before pushing) and have been working on a fix.
Comment 2 Eric Anholt 2013-10-30 23:21:29 UTC
commit 20dbeadd83ffca2345c4ba1f1ac27c19bade0d4a
Author: Eric Anholt <eric@anholt.net>
Date:   Mon Oct 28 15:17:07 2013 -0700

    i965/fs: Prefer more-critical instructions of the same age in LIFO scheduling.
Comment 3 lu hua 2013-11-04 02:21:02 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.